k8s/Microservices2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-2
  template:
    metadata:
      labels:
        app: microservice-2
    spec:
      containers:
        - name: microservice-2
          image: elalejmartin/microservices2:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
