k8s/Microservices2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-2
spec:
  selector:
    app: microservice-2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
